--- a/build.gradle
+++ b/build.gradle
@@ -44,10 +44,9 @@ dependencies {
     testImplementation 'org.junit.platform:junit-platform-suite:1.9.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
     testImplementation 'org.junit.platform:junit-platform-suite-engine:1.9.0'
-    testImplementation 'org.mockito:mockito-core:5.14.1'
-   	testImplementation 'io.appium:java-client:4.1.2'
-   	testImplementation 'info.cukes:cucumber-picocontainer:1.2.5'
-   	testImplementation 'info.cukes:cucumber-junit:1.2.5'
+   	testImplementation 'io.appium:java-client:9.5.0'
+   	testImplementation("org.apache.commons:commons-lang3:3.17.0")
+   	testImplementation("org.apache.commons:commons-io:1.3.2")
    	testImplementation group: 'org.reflections', name: 'reflections', version: '0.9.9-RC1'
 }
 
