Checkout tests were added

--- a/config.properties
+++ b/config.properties
@@ -2,12 +2,13 @@
 app_path=./Android.SauceLabs.Mobile.Sample.app.2.7.1.apk
 
 udid=
-app_platformVersion=4.4
 deviceName=Any
 commandTimeout=60
 platform=android_native
 browser=
 port=4723
+appPackage=com.swaglabsmobileapp
+
 
 device1_udid=192.168.57.101:5555
 device1_app_platformVersion=4.4
